--- a/glide.yaml
+++ b/glide.yaml
@@ -124,11 +124,11 @@ import:
   version: ~1.20.0
 - package: github.com/AlexpanXX/fsnotify
 #- package: github.com/elastos/Elastos.ELA.SideChain
-#  version: v0.1.8
-- package: github.com/elastos/Elastos.ELA.SPV #zehua feature_customID
-  version: e9c0ede974e9565c6236d67cdb37bb0d4565d020
-- package: github.com/elastos/Elastos.ELA #feature_customID
-  version: 67b1f3e274acf6e8d206f944daff9526c6e137ce
+#  version: v0.1.7
+- package: github.com/elastos/Elastos.ELA.SPV
+  version: 260c32e0b912c81c8cb4e62b79191c7dbccc43e0 #zehua feature_customID
+- package: github.com/elastos/Elastos.ELA
+  version: 805be25514e3cbeb31f84edbfb249261ba8d54f2 #feature_customID
 - package: github.com/gorilla/websocket
 - package: github.com/mattn/go-sqlite3
 - package: github.com/btcsuite/btcd/wire
