--- a/glide.yaml
+++ b/glide.yaml
@@ -126,7 +126,7 @@ import:
 #- package: github.com/elastos/Elastos.ELA.SideChain
 #  version: v0.1.7
 - package: github.com/elastos/Elastos.ELA.SPV
-  version: 260c32e0b912c81c8cb4e62b79191c7dbccc43e0 #zehua feature_customID
+  version: e9c0ede974e9565c6236d67cdb37bb0d4565d020 #elastos feature_customID
 - package: github.com/elastos/Elastos.ELA
   version: 805be25514e3cbeb31f84edbfb249261ba8d54f2 #feature_customID
 - package: github.com/gorilla/websocket
