update Elastos.ELA.SideChain vendor

--- a/glide.yaml
+++ b/glide.yaml
@@ -124,7 +124,7 @@ import:
   version: ~1.20.0
 - package: github.com/AlexpanXX/fsnotify
 - package: github.com/elastos/Elastos.ELA.SideChain
-  version: 0ca5dbe27cfa7557ed84d6ca8369ce82e175c33b #release_v0.3.0
+  version: a02c475edbcac6b87c9b347ca09206352e8e0f12 #v0.3.0
 - package: github.com/elastos/Elastos.ELA.SPV
   version: 8b57d8e3932e9d10255215c49de210308fd6fe81 #elatsos v0.1.0
 - package: github.com/elastos/Elastos.ELA
